--- a/app/src/main/res/layout/item_maraton_book.xml
+++ b/app/src/main/res/layout/item_maraton_book.xml
@@ -13,13 +13,15 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+
+            android:layout_height="wrap_content"
+            android:background="@color/lightGray">
 
             <ImageView
                 android:id="@+id/iv_maraton_item_thumbnail"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/text_view_maraton_item_title"
