--- a/app/src/main/res/layout/activity_board_result.xml
+++ b/app/src/main/res/layout/activity_board_result.xml
@@ -1,158 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/lightGray"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/iv_result"
-                android:layout_width="65dp"
-                android:layout_height="90dp"
-                android:layout_marginTop="30dp" />
-
-            <TextView
-                android:id="@+id/text_view_result_book_title"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/layout_result"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:layout_toRightOf="@id/iv_result"
-                android:text=" 책 제목"
-                android:textSize="22dp"/>
+                android:background="@color/deepGray">
 
-            <TextView
-                android:id="@+id/text_view_result_author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/text_view_result_book_title"
-                android:layout_toRightOf="@id/iv_result"
-                android:layout_marginLeft="7dp"
-                android:text="책 저자"
-                android:textSize="15dp"/>
+                <ImageView
+                    android:id="@+id/iv_result"
+                    android:layout_width="65dp"
+                    android:layout_height="90dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp" />
 
-            <TextView
-                android:id="@+id/text_view_result_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_below="@id/iv_result"
-                android:text="글 제목"
-                android:textSize="20dp"/>
+                <TextView
+                    android:id="@+id/text_view_result_book_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/iv_result"
+                    android:layout_toRightOf="@id/iv_result"
+                    android:text=" 책 제목"
+                    android:textColor="@color/blackSoft"
+                    android:textSize="22dp" />
 
-            <TextView
-                android:id="@+id/text_view_result_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/text_view_result_title"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp"
-                android:text="사용자 이름"/>
+                <TextView
+                    android:id="@+id/text_view_result_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_result_book_title"
+                    android:layout_alignLeft="@id/text_view_result_book_title"
+                    android:layout_marginLeft="7dp"
+                    android:text="책 저자"
+                    android:textColor="@color/blackSoft"
+                    android:textSize="15dp" />
 
-            <TextView
-                android:id="@+id/text_view_result_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0000-00-00 00:00"
-                android:layout_below="@id/text_view_result_title"
-                android:layout_toRightOf="@id/text_view_result_name"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="10dp"/>
+            </RelativeLayout>
 
-            <TextView
-                android:id="@+id/text_view_result_recommend"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/layout_result_middle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/text_view_result_title"
-                android:layout_toRightOf="@id/text_view_result_date"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp"
-                android:text="추천 : "/>
+                android:layout_below="@id/layout_result">
 
-            <TextView
-                android:id="@+id/text_view_result_contents"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/text_view_result_name"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="20dp"
-                android:text="글 내용"/>
+                <TextView
+                    android:id="@+id/text_view_result_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:text="글 제목"
+                    android:textColor="@color/blackSoft"
+                    android:textSize="22dp" />
+
+                <TextView
+                    android:id="@+id/text_view_result_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_result_title"
+                    android:layout_alignLeft="@id/text_view_result_title"
+                    android:layout_marginTop="10dp"
+                    android:text="닉네임"
+                    android:textColor="@color/blackSoft"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/text_view_result_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/text_view_result_name"
+                    android:layout_alignLeft="@id/text_view_result_name"
+                    android:text="0000-00-00 00:00"
+                    android:textColor="@color/blackSoft"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/text_view_result_recommend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/text_view_result_date"
+                    android:layout_marginLeft="30dp"
+                    android:layout_toRightOf="@id/text_view_result_date"
+                    android:text="추천 "
+                    android:textColor="@color/blackSoft"
+                    android:textSize="12dp" />
+
+                <View
+                    android:id="@+id/view_result_border"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/text_view_result_date"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+
+                    android:background="@color/deepGray" />
+
+                <TextView
+                    android:id="@+id/text_view_result_contents"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_below="@id/view_result_border"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="글 내용"
+
+                    android:textColor="@color/blackSoft" />
+
+            </RelativeLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_below="@id/text_view_result_contents"
+                android:layout_below="@id/layout_result_middle"
+                android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="20dp">
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/btn_board_retouch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="수정"/>
+                    android:text="수정" />
 
                 <Button
                     android:id="@+id/btn_board_delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
-                    android:text="삭제"/>
+                    android:text="삭제" />
 
                 <Button
                     android:id="@+id/btn_board_recommend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
-                    android:text="추천"/>
+                    android:text="추천" />
             </LinearLayout>
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="40dp">
+            android:layout_height="0dp"
+            android:layout_marginLeft="10dp"
+
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <View
+                android:id="@+id/view_result_border2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/deepGray" />
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="댓글"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp">
+                android:text="댓글"
+                android:textColor="@color/blackSoft" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
                 <TextView
                     android:id="@+id/text_view_reply_name"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="사용자닉네임"/>
+                    android:text="닉네임"
+                    android:textSize="15dp"
+                    android:textColor="@color/blackSoft" />
+
                 <EditText
                     android:id="@+id/et_reply_contents"
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/text_view_reply_name"
                     android:hint="댓글을 작성해주세요"
-                    android:textSize="15dp"/>
+                    android:textSize="15dp" />
+
                 <Button
                     android:id="@+id/btn_reply"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="작성"/>
+                    android:layout_alignParentRight="true"
+                    android:text="작성" />
 
-            </LinearLayout>
+            </RelativeLayout>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_Reply"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager">
-            </android.support.v7.widget.RecyclerView>
+                android:layout_marginTop="10dp"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"></android.support.v7.widget.RecyclerView>
         </LinearLayout>
 
-</LinearLayout>
+
+    </LinearLayout>
+
+
+</ScrollView>
