--- a/app/src/main/res/layout/activity_board_retouch.xml
+++ b/app/src/main/res/layout/activity_board_retouch.xml
@@ -3,17 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightGray"
     android:orientation="vertical"
     tools:context=".Board.RetouchBoardActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:layout_marginBottom="30dp"
+        android:background="@color/primary"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:text="글 수정"
-        android:textSize="30dp"
-        android:layout_gravity="center"/>
+        android:textColor="@color/blackSoft"
+        android:textSize="30dp" />
 
 
     <EditText
@@ -21,9 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="제목을 입력하세요"
-        android:textColor="@android:color/black"
+        android:textColor="@color/blackSoft"
         android:textSize="20sp"
-        tools:ignore="HardCodedText"/>
+        tools:ignore="HardCodedText" />
 
     <EditText
         android:id="@+id/et_retouch_content"
@@ -31,9 +35,10 @@
         android:layout_height="250dp"
         android:gravity="top"
         android:hint="내용을 입력하세요"
-        android:textColor="@android:color/black"
+        android:textColor="@color/blackSoft"
         android:textSize="18sp"
-        tools:ignore="HardCodedText"/>
+        tools:ignore="HardCodedText" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
