--- a/app/src/main/res/layout/activity_book_board.xml
+++ b/app/src/main/res/layout/activity_book_board.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_board"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Board.BookBoardActivity">
 
     <TextView
         android:id="@+id/text_view_board_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
+        android:background="@color/primary"
+        android:gravity="center"
+        android:text="책에 대한 자유로운 이야기"
+        android:textColor="@color/blackSoft"
         android:textSize="30dp"
-        android:text="책에 대한 자유로운 이야기" />
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_Board"
@@ -22,8 +27,7 @@
         android:layout_height="500dp"
         android:layout_below="@id/text_view_board_title"
         android:layout_marginTop="30dp"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        />
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
     <FrameLayout
         android:layout_width="match_parent"
