--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/lightGray"
     tools:context=".UserInfoActivity">
 
     <Button
         android:id="@+id/btn_google_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="구글 로그아웃" />
 
     <Button
         android:id="@+id/btn_google_revoke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/btn_google_logout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:text="구글 회원탈퇴" />
 
-</LinearLayout>
+</RelativeLayout>
