--- a/app/src/main/res/layout/item_chat_bubble.xml
+++ b/app/src/main/res/layout/item_chat_bubble.xml
@@ -4,12 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview_chat"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="2dp">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/lightGray">
 
         <LinearLayout
             android:id="@+id/layout_chat_profile"
