--- a/app/src/main/res/layout/fragment_menu2.xml
+++ b/app/src/main/res/layout/fragment_menu2.xml
@@ -5,13 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/lightGray">
 
-    <Button
-        android:id="@+id/btn_make_chat_searchroom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:text="채팅방 검색" />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floating_chat_add"
         android:layout_width="wrap_content"
@@ -25,8 +18,7 @@
         android:id="@+id/recycler_view_make_chat_chatlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/btn_make_chat_searchroom" />
+        android:layout_marginTop="10dp" />
 
 
 </RelativeLayout>
