--- a/app/src/main/res/drawable/ic_oval.xml
+++ b/app/src/main/res/drawable/ic_oval.xml
@@ -1,9 +1,5 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:bottom="4dp"
-        android:left="4dp"
-        android:right="4dp"
-        android:top="4dp">
+    <item>
         <shape android:shape="oval">
             <solid android:color="@color/primary" />
         </shape>
