--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -1,26 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Board.WriteActivity">
 
-    <TextView
-        android:id="@+id/text_view_write_all_title"
+    <LinearLayout
+        android:id="@+id/ll_write1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="30dp"
-        android:text="글 쓰기"
-        android:textSize="30dp"
-        android:gravity="center"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_view_board_write_book"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
+            android:background="@color/primaryDeep"
+            android:paddingLeft="10dp"
+            android:text="도서"
+            android:textSize="15sp"/>
+
+        <EditText
+            android:id="@+id/et_write_image"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/text_view_board_write_title"
+            android:hint="책 검색을 가장 먼저 해주세요!"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_search_book"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_below="@id/et_write_image"
+            android:scrollbars="vertical">
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ll_write"
-        android:layout_width="wrap_content"
+        android:id="@+id/ll_write2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_write_all_title"
+        android:layout_below="@id/ll_write1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_view_board_write_title"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
+            android:background="@color/primaryDeep"
+            android:paddingLeft="10dp"
+            android:text="제목"
+            android:textSize="15sp"/>
+
+        <EditText
+            android:id="@+id/et_write_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="제목을 입력하세요"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            tools:ignore="HardCodedText"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_write3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll_write2"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <TextView
@@ -28,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:text="0000-00-00 00:00"
             android:textSize="15dp"/>
 
@@ -42,51 +91,38 @@
             android:textSize="15dp"/>
 
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/et_write_image"
+    <LinearLayout
+        android:id="@+id/ll_write4"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/ll_write"
-        android:hint="책 검색을 가장 먼저 해주세요!"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_search_book"
-        android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:layout_below="@id/et_write_image"
-        android:scrollbars="vertical">
-    </android.support.v7.widget.RecyclerView>
-
-    <EditText
-        android:id="@+id/et_write_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recycler_search_book"
-        android:hint="제목을 입력하세요"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        tools:ignore="HardCodedText"/>
-
-    <EditText
-        android:id="@+id/et_write_content"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_below="@id/et_write_title"
-        android:gravity="top"
-        android:hint="내용을 입력하세요"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        tools:ignore="HardCodedText"/>
-
+        android:layout_height="match_parent"
+        android:layout_below="@id/ll_write3"
+        android:layout_above="@id/btn_upload_board"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/text_view_board_write_content"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
+            android:background="@color/primaryDeep"
+            android:paddingLeft="10dp"
+            android:text="내용"
+            android:textSize="15sp"/>
+        <EditText
+            android:id="@+id/et_write_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="내용을 입력하세요"
+            android:textColor="@android:color/black"
+            android:scrollbars="vertical"
+            android:textSize="18sp"
+            tools:ignore="HardCodedText"/>
+    </LinearLayout>
     <Button
         android:id="@+id/btn_upload_board"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/et_write_content"
+        android:layout_alignParentBottom="true"
         android:text="작성"
         tools:ignore="HardCodedText" />
-
 </RelativeLayout>
