--- a/app/src/main/res/layout/fragment_menu2.xml
+++ b/app/src/main/res/layout/fragment_menu2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_menu2"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightGray">
@@ -12,6 +13,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:backgroundTint="@color/primary"
+        app:borderWidth="0dp"
         android:src="@drawable/ic_add" />
 
     <android.support.v7.widget.RecyclerView
@@ -19,6 +21,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp" />
-
 
 </RelativeLayout>
