--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,16 +7,37 @@
     android:background="@color/lightGray"
     tools:context=".ChatActivity">
 
-    <Button
-        android:id="@+id/btn_chat_exit"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:text="퇴장"/>
+    <RelativeLayout
+        android:id="@+id/layout_chat_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primary">
+
+        <TextView
+            android:id="@+id/text_view_chat_room_title"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:background="@color/primary"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:textColor="@color/blackSoft"
+            android:textSize="16dp" />
+
+        <Button
+            android:id="@+id/btn_chat_exit"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="퇴장" />
+
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/btn_chat_exit"
+        android:layout_below="@id/layout_chat_menu"
         android:orientation="vertical">
 
         <LinearLayout
@@ -27,7 +48,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_chat"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
