--- a/app/src/main/res/layout/activity_my_chat.xml
+++ b/app/src/main/res/layout/activity_my_chat.xml
@@ -9,14 +9,13 @@
     <TextView
         android:id="@+id/text_view_my_chat_temp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_height="56dp"
         android:background="@color/primary"
-        android:gravity="center"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
         android:text="내가 참여한 채팅방"
-        android:textSize="30dp" />
+        android:textColor="@color/blackSoft"
+        android:textSize="16dp"/>
 
     <ListView
         android:id="@+id/listview_my_chat_chatlist"
