--- a/app/src/main/res/layout/activity_board_search.xml
+++ b/app/src/main/res/layout/activity_board_search.xml
@@ -7,14 +7,13 @@
     <TextView
         android:id="@+id/text_view_search_user"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_height="56dp"
         android:background="@color/primary"
-        android:gravity="center_horizontal"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="검색"
-        android:textSize="30dp" />
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:text="글 검색"
+        android:textColor="@color/blackSoft"
+        android:textSize="16dp"  />
 
     <LinearLayout
         android:id="@+id/ll_search"
