--- a/app/src/main/res/layout/activity_make_chat_room.xml
+++ b/app/src/main/res/layout/activity_make_chat_room.xml
@@ -15,7 +15,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="56dp"
             android:background="@color/primaryDeep"
             android:gravity="center_vertical|left"
             android:paddingLeft="10dp"
@@ -40,7 +40,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="56dp"
             android:background="@color/primaryDeep"
             android:gravity="center_vertical|left"
             android:paddingLeft="10dp"
@@ -65,8 +65,8 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/primaryDeep"
+            android:layout_height="56dp"
+            android:background="@color/primary"
             android:gravity="center_vertical|left"
             android:paddingLeft="10dp"
             android:text="소개"
