--- a/app/src/main/res/layout/activity_my_board.xml
+++ b/app/src/main/res/layout/activity_my_board.xml
@@ -8,14 +8,13 @@
     <TextView
         android:id="@+id/text_view_search_board"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_height="56dp"
         android:background="@color/primary"
-        android:gravity="center"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="내가 쓴 글"
-        android:textSize="30dp" />
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:text="내가 쓴 게시글"
+        android:textColor="@color/blackSoft"
+        android:textSize="16dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_search"
