--- a/app/src/main/res/layout/item_chat_room.xml
+++ b/app/src/main/res/layout/item_chat_room.xml
@@ -72,6 +72,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="50dp"
                 android:layout_marginBottom="30dp"
+                android:gravity="center"
                 android:maxLength="50"
                 android:text="채팅방 설명 20자"
                 android:textSize="12dp" />
